--- a/intro.html
+++ b/intro.html
@@ -12,15 +12,15 @@
   <link rel="manifest" href="./favicon_picture/site.webmanifest">
   <link rel="mask-icon" href="./favicon_picture/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
-  <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/base.css">
+  <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/base.css">
 </head>
 
 <body>
   <div class="intro">
     <!-- <img src="/img_intro/intro.png" alt="" class="intro"> -->
     <div class="intro__logo animat">
-      <img src="/img_intro/logo_intro.png" alt="" class="logo__img">
+      <img src="./img_intro/logo_intro.png" alt="" class="logo__img">
     </div>
     <div class="intro__btns anim">
       <a href="index.html" class="intro__btns__active">
