--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
   <link rel="manifest" href="./favicon_picture/site.webmanifest">
   <link rel="mask-icon" href="./favicon_picture/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
-  <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/base.css">
+  <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/base.css">
 </head>
 
 <body>
@@ -21,8 +21,8 @@
     <header class="header">
       <div class="container clearfix">
         <div class="header__left">
-          <a href="intro.html" class="logo">
-            <img src="/img/logo/logo_header.png" alt="" class="logo__img">
+          <a href="./intro.html" class="logo">
+            <img src="./img/logo/logo_header.png" alt="" class="logo__img">
           </a>
         </div>
         <div class="header__right">
@@ -49,20 +49,20 @@
               <div class="nav">
                 <ul class="nav__list">
                   <li class="nav__item">
-                    <a href="index.html" class="nav__link">
+                    <a href="./index.html" class="nav__link">
                       <div class="nav__icon nav__icon_direction"></div>
                       <div class="nav__text nax__text--one">Главная 
                        </div>
                     </a>
                   </li>
                   <li class="nav__item">
-                    <a href="/otziv.html" class="nav__link">
+                    <a href="./otziv.html" class="nav__link">
                       <div class="nav__icon nav__icon_startt"></div>
                       <div class="nav__text nax__text">Отзывы</div>
                     </a>
                   </li>
                   <li class="nav__item">
-                    <a href="/about.html" class="nav__link">
+                    <a href="./about.html" class="nav__link">
                       <div class="nav__icon nav__icon_plane"></div>
                       <div class="nav__text nax__text--three">Экипаж</div>
                     </a>
@@ -74,7 +74,7 @@
           <nav class="breadcrumbs">
             <ul class="breadcrumbs__list">
               <li class="breadcrumbs__item">
-                <a href="index.html" class="breadcrumbs__item-link">Главная</a>
+                <a href="./index.html" class="breadcrumbs__item-link">Главная</a>
               </li>
               <li class="breadcrumbs__item">
                 <a href="#" class="breadcrumbs__item-link breadcrumbs__item-link_active">Экипаж</a>
@@ -258,7 +258,7 @@
       </div>
       <div class="footer__center">
         <div class="img__logo">
-          <img src="/img/logo/logo_header.png" alt="" class="logo_imgs">
+          <img src="./img/logo/logo_header.png" alt="" class="logo_imgs">
         </div>
       </div>
       <div class="footer__right">
@@ -267,27 +267,27 @@
           <ul class="icons__list">
             <li class="icons__item">
               <a href="" class="icons__img">
-                <img src="/img/icons/vk.png" alt="" class="icons__icon">
+                <img src="./img/icons/vk.png" alt="" class="icons__icon">
               </a>
             </li>
             <li class="icons__item">
               <a href="" class="icons__img icons__img--top">
-                <img src="/img/icons/fb.png" alt="" class="icons__icon">
+                <img src="./img/icons/fb.png" alt="" class="icons__icon">
               </a>
             </li>
             <li class="icons__item">
               <a href="" class="icons__img">
-                <img src="/img/icons/google.png" alt="" class="icons__icon">
+                <img src="./img/icons/google.png" alt="" class="icons__icon">
               </a>
             </li>
             <li class="icons__item">
               <a href="" class="icons__img">
-                <img src="/img/icons/twitter.png" alt="" class="icons__icon">
+                <img src="./img/icons/twitter.png" alt="" class="icons__icon">
               </a>
             </li>
             <li class="icons__item">
               <a href="" class="icons__img">
-                <img src="/img/icons/mail.png" alt="" class="icons__icon">
+                <img src="./img/icons/mail.png" alt="" class="icons__icon">
               </a>
             </li>
           </ul>
