--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <link rel="mask-icon" href="./favicon_picture/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
-  <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/base.css">
+  <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/base.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
       <div class="container clearfix">
         <div class="header__left">
           <a href="intro.html" class="logo">
-            <img src="/img/logo/logo_header.png" alt="" class="logo__img">
+            <img src="./img/logo/logo_header.png" alt="" class="logo__img">
           </a>
         </div>
         <div class="header__right">
@@ -50,20 +50,20 @@
           <div class="nav">
             <ul class="nav__list">
               <li class="nav__item">
-                <a href="index.html" class="nav__link">
+                <a href="./index.html" class="nav__link">
                   <div class="nav__icon nav__icon_direction"></div>
                   <div class="nav__text nax__text--one">Главная 
                    </div>
                 </a>
               </li>
               <li class="nav__item">
-                <a href="/otziv.html" class="nav__link">
+                <a href="./otziv.html" class="nav__link">
                   <div class="nav__icon nav__icon_startt"></div>
                   <div class="nav__text nax__text">Отзывы</div>
                 </a>
               </li>
               <li class="nav__item">
-                <a href="/about.html" class="nav__link">
+                <a href="./about.html" class="nav__link">
                   <div class="nav__icon nav__icon_plane"></div>
                   <div class="nav__text nax__text--three">Экипаж</div>
                 </a>
@@ -74,7 +74,7 @@
         <div class="content">
           <div class="rate">
             <div class="banner__img">
-              <img src="/banner.png" alt="" class="banner__icon">
+              <img src="./banner.png" alt="" class="banner__icon">
             </div>
             <h1 class="rate__title animat">Тарифы</h1>
             <ul class="rate__list">
@@ -141,7 +141,7 @@
               <li class="last__news-item clearfix">
                 <div class="news__wrap">
                   <div class="news__img">
-                    <img src="/img/content/planeflying1.png" alt="" class="news__icon">
+                    <img src="./img/content/planeflying1.png" alt="" class="news__icon">
                   </div>
                   <div class="news__text">
                       <div class="news__data">12.10.2016</div>
@@ -158,7 +158,7 @@
               <li class="last__news-item clearfix">
                 <div class="news__wrap">
                   <div class="news__img">
-                    <img src="/img/content/Photo.png" alt="" class="news__icon">
+                    <img src="./img/content/Photo.png" alt="" class="news__icon">
                   </div>
                   <div class="news__text">
                       <div class="news__data">01.02.2016</div>
@@ -174,7 +174,7 @@
               <li class="last__news-item clearfix">
                 <div class="news__wrap">
                   <div class="news__img">
-                    <img src="/img/content/Layer 5.png" alt="" class="news__icon">
+                    <img src="./img/content/Layer 5.png" alt="" class="news__icon">
                   </div>
                   <div class="news__text">
                       <div class="news__data">12.10.2015</div>
@@ -241,7 +241,7 @@
       </div>
       <div class="footer__center">
         <div class="img__logo">
-          <img src="/img/logo/logo_header.png" alt="" class="logo_imgs">
+          <img src="./img/logo/logo_header.png" alt="" class="logo_imgs">
         </div>
       </div>
       <div class="footer__right">
@@ -250,27 +250,27 @@
             <ul class="icons__list ">
               <li class="icons__item">
                 <a href="vk.com" class="icons__img">
-                  <img src="/img/icons/vk.png" alt="" class="icons__icon">
+                  <img src="./img/icons/vk.png" alt="" class="icons__icon">
                 </a>
               </li>
               <li class="icons__item">
                 <a href="facebook.com" class="icons__img icons__img--top">
-                    <img src="/img/icons/fb.png" alt="" class="icons__icon">
+                    <img src="./img/icons/fb.png" alt="" class="icons__icon">
                 </a>
               </li>
               <li class="icons__item">
                 <a href="https://www.google.com" class="icons__img">
-                    <img src="/img/icons/google.png" alt="" class="icons__icon">
+                    <img src="./img/icons/google.png" alt="" class="icons__icon">
                 </a>
               </li>
               <li class="icons__item">
                 <a href="twitter.com" class="icons__img">
-                    <img src="/img/icons/twitter.png" alt="" class="icons__icon">
+                    <img src="./img/icons/twitter.png" alt="" class="icons__icon">
                 </a>
               </li>
               <li class="icons__item">
                 <a href="mail.ru" class="icons__img">
-                    <img src="/img/icons/mail.png" alt="" class="icons__icon">
+                    <img src="./img/icons/mail.png" alt="" class="icons__icon">
                 </a>
               </li>
             </ul>
