--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="banner__img">
               <img src="./banner.png" alt="" class="banner__icon">
             </div>
-            <h1 class="rate__title animat">Тарифы</h1>
+            <h1 class="rate__title">Тарифы</h1>
             <ul class="rate__list">
               <li class="rate__item">
                 <div class="rates">
