--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
                       </div>
          
                   </div>
-                  <h1 class="crews__title">Сухарина Инна Николаевна</h1>
+                  <h1 class="crews__title">Трубченко Алена Владимировна</h1>
                   <h3 class="crewss__title">Бортпроводник</h3>
                   <p class="crews__text"> Благодаря деятельности этого
                     человека, на борту самолета клиенты
